alpm-types/src/snapshots/env::invalid_makepkg_option@case_1.snap
---
source: alpm-types/src/env.rs
---
error: invalid packaging or build environment option
 | 
 | !somethingelse
 | ^ expected `buildflags`
 | 
 = while parsing:
   makepkg option: (!somethingelse)
   → invalid packaging or build environment option
   → expected `buildflags`, `ccache`, `check`, `color`, `distcc`, `sign`, `makeflags`, `autodeps`, `debug`, `docs`, `emptydirs`, `libtool`, `lto`, `pestrip`, `purge`, `staticlibs`, `strip`, `zipman`
